--- a/app/components/ui/right-panel.html
+++ b/app/components/ui/right-panel.html
@@ -16,10 +16,11 @@
         <span class="icon-bar"></span>
       </button>
 
-      <button class="btn navbar-toggle col-xs-12 glyphicon glyphicon-search" ng-click="panels.search = !panels.search">
+      <button class="btn navbar-toggle col-xs-12 glyphicon glyphicon-search" title="Search"
+        ng-click="panels.search = !panels.search">
       </button>
 
-      <button class="btn navbar-toggle col-xs-12 glyphicon"
+      <button class="btn navbar-toggle col-xs-12 glyphicon" title="Swich visualization mode"
         ng-class="{ true: 'glyphicon-repeat', false: 'glyphicon-refresh'}[state.name == 'home.hive-graph']"
         ng-click="state.name = (state.name == 'home.hive-graph') ? 'home.force-graph' : 'home.hive-graph'">
       </button>
