--- a/app/components/ui/main.html
+++ b/app/components/ui/main.html
@@ -77,6 +77,8 @@
 
 </div>
 
+<div growl></div>
+
 <div ng-controller="PanelCtrl as panels" ng-cloak>
 
   <div ng-include="'components/ui/right-panel.html'">
