--- a/app/components/ui/right-panel.html
+++ b/app/components/ui/right-panel.html
@@ -26,7 +26,7 @@
       </button>
 
       <button class="btn navbar-toggle col-xs-12 glyphicon glyphicon-floppy-disk"
-        ng-click="loadSave()">
+        ng-click="panels.save = true">
 
       </button>
     </div>
@@ -49,6 +49,34 @@
 
   </div>
 <div>
+
+<div class="modal-dialog" ng-show="panels.save">
+  <div class="modal-content">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="panels.save = !panels.save">&times;</button>
+    <div class="modal-header">
+      <h3 class="modal-title">Save this view</h3>
+    </div>
+    <div class="modal-body">
+      <div class="row">
+
+        <div class="col-md-12">
+          <label for="exampleInputPassword1">Bookmark or copy this url to save this view</label>
+          <div class="input-group">
+            <input class="form-control" ng-value="getSaveUrl()" type="text" readonly="readonly" />
+            <span class="input-group-btn">
+              <a class="btn btn-default" href="{{getSaveUrl()}}" title="Right click to bookmark"><i class="fa fa-link"></i></a>
+              <a class="btn btn-default" href="" clip-copy="getSaveUrl()" title="Copy to clipboard"><i class="fa fa-clipboard"></i></a>
+            </span>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-primary" ng-click="panels.save = false">OK</button>
+    </div>
+  </div>
+</div>
 
 <div class="modal-dialog" ng-show="panels.search">
   <div class="modal-content">
