--- a/app/components/ui/right-panel.html
+++ b/app/components/ui/right-panel.html
@@ -20,7 +20,7 @@
         ng-click="panels.search = !panels.search">
       </button>
 
-      <button class="btn navbar-toggle col-xs-12 glyphicon" title="Swich visualization mode"
+      <button class="btn navbar-toggle col-xs-12 glyphicon" title="Switch visualization mode"
         ng-class="{ true: 'glyphicon-repeat', false: 'glyphicon-refresh'}[state.name == 'home.hive-graph']"
         ng-click="state.name = (state.name == 'home.hive-graph') ? 'home.force-graph' : 'home.hive-graph'">
       </button>
