--- a/app/components/ui/searchModalContent.html
+++ b/app/components/ui/searchModalContent.html
@@ -69,7 +69,7 @@
     </div>
 
   </tab>
-  <tab heading="Pathways" active="active2">
+  <tab heading="Paths" active="active2">
 
     <div class="modal-body">
 
