--- a/app/components/ui/bottom-panel.html
+++ b/app/components/ui/bottom-panel.html
@@ -109,11 +109,15 @@
 </script>
 
 <script type="text/ng-template" id="cellPubMedTemplate">
+<div class="ngCellText" ng-class="col.colIndex()" ng-switch="row.entity.PMIDs || 'null'">
+    <span  ng-switch-when="null">{{COL_FIELD}}</span>
+    <a ng-switch-default href="http://www.ncbi.nlm.nih.gov/pubmed/{{row.entity.PMIDs}}"  target="_blank">{{COL_FIELD}}</a>
+</div>
+</script>
+
+<script type="text/ng-template" id="cellSourceTemplate">
 <div class="ngCellText" ng-class="col.colIndex()">
-  <span ng-if="COL_FIELD == 'putative'">putative</span>
-  <a ng-if="COL_FIELD !== 'putative'" href="http://www.ncbi.nlm.nih.gov/pubmed/{{COL_FIELD}}" target="_blank">
-    {{COL_FIELD}}
-  </a>
+  <abbr title="{{row.entity.Databases}}">{{COL_FIELD}}</abbr>
 </div>
 </script>
 
@@ -142,21 +146,21 @@
 
 <tabset>
   <tab active="active1">
-    <tab-heading ng-click="panelState.data = true">
+    <tab-heading ng-click="panelState.data = true" title="Show cell types">
       Cell types ({{selectedIds.cells.length}}/{{ (data.cells | filter : { locked: false }).length}})
     </tab-heading>
     <div class="gridStyle" ng-grid="gridOptions.cells" ng-if="panelState.data && active1"></div>
   </tab>
   <tab active="active2">
-    <tab-heading ng-click="panelState.data = true" bindonce="data">Genes ({{selectedIds.genes.length}}/{{(data.genes | filter : { locked: false }).length}})</tab-heading>
+    <tab-heading ng-click="panelState.data = true" bindonce="data" title="Show ligand/receptor genes">Genes ({{selectedIds.genes.length}}/{{(data.genes | filter : { locked: false }).length}})</tab-heading>
     <div class="gridStyle" ng-grid="gridOptions.genes" ng-if="panelState.data && active2"></div>
   </tab>
   <tab active="active3">
-    <tab-heading ng-click="panelState.data = true" bindonce="data">Pairs ({{selectedIds.pairs.length}}/{{(data.pairs | filter : { locked: false }).length}})</tab-heading>
+    <tab-heading ng-click="panelState.data = true" bindonce="data" title="Show ligand-receptor pairs">Pairs ({{selectedIds.pairs.length}}/{{(data.pairs | filter : { locked: false }).length}})</tab-heading>
     <div class="gridStyle" ng-grid="gridOptions.pairs" ng-if="panelState.data && active3"></div>
   </tab>
   <tab active="active4">
-    <tab-heading ng-click="panelState.data = true">Options</tab-heading>
+    <tab-heading ng-click="panelState.data = true" title="Miscellaneous visualization options">Options</tab-heading>
     <div ng-if="active4">
       <div class="col-md-3">
         <h4>Graph</h4>
@@ -222,31 +226,52 @@
     </div>
   </tab>
   <tab active="active5">
-    <tab-heading ng-click="panelState.data = true">Help</tab-heading>
-    <div class="col-md-12">
+    <tab-heading class="tab-help" ng-click="panelState.data = true" title="Ligand-Receptor Connectome Help">Help</tab-heading>
+    <div class="col-md-12" style="overflow: auto">
       <h4 class="title">Ligand Receptor Connectome <small>{{site.version}}</small></h4>
       <p>A visual guide to FANTOM5 Ligand-Receptor interactions</p>
 
-      <marked>
-* Entity and options panel
-  * Use the toggle button on the bottom right to show and hide the entity and options panel.
-  * Switch between lists of cells, genes, and ligand receptor pairs using the tabs.
-  * Turn on and off cells, genes, and ligand receptors pairs using the toggle button on the left in each row.
-  * Use ctrl-click and shift-click to select multiple nodes and change visibility as a group.
-  * Use the "Search..." button on the upper right of the data list to filter each lists by substring search.
-  * Download the visualization or data shown in the options tab.
-* Information panel
-  * Use the toggle button on the top right to show and hide the information panel.
-  * This panel will display information about the current network as well as additional information on selected nodes and edges.
-* Search feature
-  * Use the search button (magnifying glass) in the upper right to search for top expression values and/or top cell-cell pathways.
-* Visualization style
-  * Use the visualization toggle button in the upper right to switch between hive plot and force direct plot.
-* Visualization
-  * Click to select a node.  Click again to deselect.  Node information will appear in the information panel.
-  * Hold the Ctrl key to selected multiple nodes.  Shift-Click to select a node and neighbors.
-  * Right click for additional options.
-      </marked>
+      <p>
+        <u>Entity and options panel</u> - <i class="fa fa-bars"></i> (bottom right)
+        <br/>Displays entities and options panel
+      </p>
+      <ul>
+        <li><strong>Tabs</strong>: switch between lists of cells, genes, and ligand receptor pairs</li>
+        <li><strong>Visibility Toggle buttons</strong>: (<i class="glyphicon glyphicon-eye-open"></i> left in each row) turn on/off cells and genes (ligand/receptors)</li>
+        <li><strong>ctrl-click</strong> and <strong>shift-click</strong>: select multiple nodes and change visibility as a group</li>
+        <li><strong>Search... <i class="glyphicon glyphicon-search"></i></strong> button:  (upper right of the data list) filters each lists by substring search</li>
+      </ul>
+
+      <p>
+        <u>Information panel</u> - <i class="fa fa-bars"></i> (top right)
+        <br />Displays information on current network and on selected nodes/edges
+      </p>
+
+      <p>
+        <u>Search feature</u> - <i class="glyphicon glyphicon-search"></i>
+        <br />Search for top expression values and/or top cell-to-cell communication paths
+      </p>
+
+      <p>
+        <u>Visualization style</u> - <i class="glyphicon glyphicon-repeat"></i>
+        <br />Switch between hive/force-direct plots
+      </p>
+
+      <p>
+        <u>Save feature</u> - <i class="glyphicon glyphicon-floppy-disk"></i>
+        <br />Save current view as SVG, download data in JSON or GML format, bookmark this view for later
+      </p>
+
+      <p>
+        <u>Visualization</u>
+      </p>
+      <ul>
+        <li><strong>Click</strong>: select/deselect a node (information appears in the information panel)</li>
+        <li><strong>Ctrl-click</strong>: select multiple nodes</li>
+        <li><strong>Shift-Click</strong>: select a node and neighbors</li>
+        <li><strong>Right click</strong>: additional options</li>
+      </ul>
+
     </div>
   </tab>
 </tabset>
