--- a/app/components/ui/saveModalContent.html
+++ b/app/components/ui/saveModalContent.html
@@ -27,7 +27,7 @@
       <div class="input-group">
         <input class="form-control" ng-value="getSaveUrl()" type="text" readonly="readonly" />
         <span class="input-group-btn">
-          <a class="btn btn-default" href="{{getSaveUrl()}}" title="Right click to bookmark"><i class="glyphicon glyphicon-link"></i></a>
+          <a class="btn btn-default" ng-click="$event.preventDefault()" href="{{getSaveUrl()}}" title="Right click to bookmark"><i class="glyphicon glyphicon-link"></i></a>
           <a class="btn btn-default" href="" clip-copy="getSaveUrl()" title="Copy to clipboard"><i class="fa fa-clipboard"></i></a>
         </span>
       </div>
