--- a/app/components/ui/bottom-panel.html
+++ b/app/components/ui/bottom-panel.html
@@ -111,7 +111,7 @@
 <script type="text/ng-template" id="cellPubMedTemplate">
 <div class="ngCellText" ng-class="col.colIndex()" ng-switch="row.entity.PMIDs || 'null'">
     <span  ng-switch-when="null">{{COL_FIELD}}</span>
-    <a ng-switch-default href="http://www.ncbi.nlm.nih.gov/pubmed/{{row.entity.PMIDs}}"  target="_blank">{{COL_FIELD}}</a>
+    <a ng-switch-default ng-attr-href="http://www.ncbi.nlm.nih.gov/pubmed/{{row.entity.PMIDs}}" target="_blank">{{COL_FIELD}}</a>
 </div>
 </script>
 
