--- a/app/components/ui/bottom-panel.html
+++ b/app/components/ui/bottom-panel.html
@@ -228,8 +228,11 @@
   <tab active="active5">
     <tab-heading class="tab-help" ng-click="panelState.data = true" title="Ligand-Receptor Connectome Help">Help</tab-heading>
     <div class="col-md-12" style="overflow: auto">
-      <h4 class="title">Ligand Receptor Connectome <small>{{site.version}}</small></h4>
-      <p>A visual guide to FANTOM5 Ligand-Receptor interactions</p>
+      <h3 class="title">Ligand Receptor Connectome <small>{{site.version}}</small></h3>
+      <blockquote>
+      <h4>A visual guide to FANTOM5 Ligand-Receptor interactions as described in Ramilowski et al. ‘A draft network of ligand-receptor mediated multicellular signaling in human’ 2015.
+      <br />Site source code at <a href="https://github.com/Hypercubed/connectome">Hypercubed/connectome</a>.</h4>
+      </blockquote>
 
       <p>
         <u>Entity and options panel</u> - <i class="fa fa-bars"></i> (bottom right)
